--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "@radix-ui/react-dialog": "^1.1.6",
     "@radix-ui/react-label": "^2.1.1",
     "@radix-ui/react-slot": "^1.1.2",
+    "@supabase/supabase-js": "^2.48.1",
     "axios": "^1.7.9",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "dare-and-truth-fe": "file:",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.473.0",
     "next": "15.1.2",
@@ -29,6 +31,7 @@
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
     "use-debounce": "^10.0.4",
+    "uuid": "^11.0.5",
     "zod": "^3.24.1"
   },
   "devDependencies": {
